--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 - cp contrib/env-sample .env
 
 script:
-- pipenv run flake8 .
+- pipenv run flake8
 - pipenv run pytest --cov=pypro
 
 after_success:
