--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ sudo: true
 python: 
 - 3.8
 
+services:
+postgresql
+
+addons:
+postgresql: '12.4'
+
 env:
   global:
   - PIPENV_VENV_IN_PROJECT=1
@@ -14,6 +20,9 @@ install:
 - pip install pipenv
 - pipenv sync --dev
 - cp contrib/env-sample .env
+
+before_script:
+- psql -c "CREATE DATABASE testdb;" -U postgres
 
 script:
 - pipenv run flake8
