--- a/.travis.yml
+++ b/.travis.yml
@@ -3,30 +3,36 @@ dist: xenial
 sudo: true
 
 python: 
-- 3.8
+  - 3.8
 
 services:
- postgresql
+  - postgresql
+
 addons:
-  postgresql: '9'
+  postgresql: '12.4'
+  apt:
+    packages:
+    - postgresql-12.4
+    - postgresql-client-12.4
 
 env:
   global:
+  - PGPORT=5432
   - PIPENV_VENV_IN_PROJECT=1
   - PIPENV_IGNORE_VIRTUALENVS=1
 
 install:
-- pip install pipenv
-- pipenv sync --dev
-- cp contrib/env-sample .env
+  - pip install pipenv
+  - pipenv sync --dev
+  - cp contrib/env-sample .env
 
 before_script:
-- psql -c "CREATE DATABASE testdb;" -U postgres
+  - psql -c "CREATE DATABASE testdb;" -U postgres
 
 script:
-- pipenv run flake8
-- pipenv run pytest --cov=pypro
+  - pipenv run flake8
+  - pipenv run pytest --cov=pypro
 
 after_success:
-- pipenv run codecov
+  - pipenv run codecov
 
