--- a/.github/workflows/django_project.yml
+++ b/.github/workflows/django_project.yml
@@ -33,7 +33,7 @@ jobs:
         pipenv sync --dev
     - name: Lint with flake8
       run: |
-        pipenv run flake8 .
+        pipenv run flake8
     - name: Test with pytest
       run: |
         pipenv run pytest pypro --cov=pypro
